// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. Renders default layout 1`] = `
<div>
  <div
    style={
      Object {
        "color": "rgba(105,105,105,1)",
      }
    }
  >
    “
  </div>
  <div
    className="responsive-styles__component-fbPFZZ kssypV"
  >
    [The judgement was] taken because of the evidence available in the court today, that the grandmother is an appropriate carer for the child
  </div>
  <div>
    <div
      style={
        Object {
          "color": "rgba(105,105,105,1)",
        }
      }
    >
      Judge Sapnara
    </div>
  </div>
</div>
`;

exports[`2. Renders without a caption 1`] = `
<div>
  <div
    style={
      Object {
        "color": "rgba(105,105,105,1)",
      }
    }
  >
    “
  </div>
  <div
    className="responsive-styles__component-fbPFZZ kssypV"
  >
    [The judgement was] taken because of the evidence available in the court today, that the grandmother is an appropriate carer for the child
  </div>
  <div>
    <div
      style={
        Object {
          "color": "rgba(105,105,105,1)",
        }
      }
    >
      
    </div>
  </div>
</div>
`;

exports[`3. Renders with a twitter handle 1`] = `
<div>
  <div
    style={
      Object {
        "color": "rgba(105,105,105,1)",
      }
    }
  >
    “
  </div>
  <div
    className="responsive-styles__component-fbPFZZ kssypV"
  >
    [The judgement was] taken because of the evidence available in the court today, that the grandmother is an appropriate carer for the child
  </div>
  <div>
    <div
      style={
        Object {
          "color": "rgba(105,105,105,1)",
        }
      }
    >
      Judge Sapnara
    </div>
    <div>
      <svg
        height={10}
        width={12}
      >
        <path
          fill="#006699"
        />
      </svg>
      <a
        href="https://twitter.com/@henrywinter"
        rel=" noopener noreferrer"
        role="link"
        target="_blank"
      >
        @henrywinter
      </a>
    </div>
  </div>
</div>
`;

exports[`4. Renders with different colours 1`] = `
<div>
  <div
    style={
      Object {
        "color": "rgba(133,0,41,1)",
      }
    }
  >
    “
  </div>
  <div
    className="responsive-styles__component-fbPFZZ kssypV"
  >
    [The judgement was] taken because of the evidence available in the court today, that the grandmother is an appropriate carer for the child
  </div>
  <div>
    <div
      style={
        Object {
          "color": "rgba(133,0,41,1)",
        }
      }
    >
      Judge Sapnara
    </div>
  </div>
</div>
`;
